# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.511 2007-12-03 14:19:04 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/11/20) Rewrite of Kernel::System::CSV by using cpan module Text::CSV
    for parsing and generating CSV files.
 - (2007/11/07) Changed default config of WebMaxFileUpload from 10 MB to
    16 MB.
 - (2007/11/07) Changed Kernel::System::Crypt::PGP to reject any UTF8-strings,
    as these would get autoconverted into ISO - thus garbling the result.
    Currently, only binary octets and ISO-strings are supported as input.
 - (2007/10/25) Improved Kernel::System::Crypt::PGP to return information about
    the PGP-keys that were actually used in Decrypt() and Verify().
 - (2007/10/25) Updated all cpan modules.
 - (2007/10/17) Added GroupLookup() and RoleLookup() to Group.pm and removed the
    two methods GetGroupIdByName() and GetRoleIdByName() which were already marked
    as deprecated.
 - (2007/10/08) Added support of ticket free text links in ticket view,
    configurable via SysConfig.
 - (2007/10/05) Added fist version of AJAX framework support in phone ticket.
 - (2007/10/01) Added <ModuleRequired Version="0.01">SomeModule</ModuleRequired>
    feature to .opm format for enforcing installed CPAN modules.
 - (2007/09/25) Fixed bug# 2312 - Wide character error in Layout.pm if system
    runs in utf-8 mode.
 - (2007/09/18) Did some improvments in Kernel/Output/HTML/Layout.pm to
    get an better performance if the block function is used many times
    (e. g. > 1000 times, 30% faster).
 - (2007/09/13) Fixed bug# 1186 - Convertion from HTML to text incomplete
    if html encoded chars like &Egrave; or &eacute; is used. Added full
    HTML to text convertion to email parser.